openshift/franc/deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: franc
  namespace: franc
  labels:
    app.kubernetes.io/instance: franc-dev
    app.kubernetes.io/name: franc
    app.openshift.io/runtime: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: franc-dev
      app.kubernetes.io/name: franc
      app.openshift.io/runtime: nodejs
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: franc-dev
        app.kubernetes.io/name: franc
        app.openshift.io/runtime: nodejs
    spec:
      containers:
        - name: franc
          image: default-route-openshift-image-registry.apps.ocp4.mr-openshift.co.uk/franc/development-git:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
