openshift/franc/deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: franc
  namespace: franc
  labels:
    app.kubernetes.io/instance: franc-dev
    app.kubernetes.io/name:franc
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: franc-dev
    app.kubernetes.io/name: franc
    app.openshift.io/runtime: nodejs
