openshift/franc/deployment/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: franc
  namespace: franc
spec:
  path: /
  to:
    kind: Service
    name: franc
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  wildcardPolicy: None
